# magritte-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.sh
MADictAccessor/: MADictAccessorTest.py  MADictAccessor_class.py  MAPluggableAccessorTest.py  MAPluggableAccessor_class.py
Magritte/: AbstractTestForAllDescriptions.py  CommonAncestorForTests.py  MAAccessor_class.py  MAAdaptiveModel_Test.py  MAAdaptiveModel_class.py  MAAdaptiveModel_test.py  MAAttrAccessor_Test.py  MAAttrAccessor_class.py  MABooleanDescriptionTest.py  MABooleanDescription_class.py  MABooleanDescription_selfdesc.py  MACondition.py  MAConditionTest.py  MACondition_Test.py  MACondition_class.py  MACondition_test.py  MAConjunctiveCondition_class.py  MAContainerTest.py  MAContainer_class.py  MAContainer_selfdesc.py  MADateAndTimeDescriptionTest.py  MADateAndTimeDescription_class.py  MADateDescription_Test.py  MADateDescription_class.py  MADescriptionTest.py  MADescription_class.py  MADescription_init_Test.py  MADescription_selfdesc.py  MADescription_sort_Test.py  MADictAccessorTest.py  MADictAccessor_class.py  MADurationDescriptionTest.py  MADurationDescription_class.py  MAElementDescriptionTest.py  MAElementDescription_class.py  MAElementDescription_selfdesc.py  MAEqualityTester_Test.py  MAEqualityTester_visitor.py  MAFloatDescriptionTest.py  MAFloatDescription_class.py  (+74 more)
Magritte-SQLAlchemy/: demo.py  dynamic-model.py
MagritteSQL/: Makefile
MagritteSQLAlchemy/: MAContainerCopier.py  SQLAlchemyModelGenerator.py  SqlAlchemyExample.py  accessors_example.py  fkeysmapper.py  (+1 more)
(+230 files in other folders)
